--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,15 @@ services:
       - '3000:3000'
     environment:
       - NODE_ENV=production
+      - DATABASE_URL=${DATABASE_URL}
+      - SECRET_KEY=${SECRET_KEY}
+      - NEXT_PUBLIC_SAFE_KEY=${NEXT_PUBLIC_SAFE_KEY}
     depends_on:
       - db
     networks:
       - my_network
+    env_file:
+      - .env
 
   db:
     image: postgres:latest
