--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,2 +1,2 @@
 [my_vm]
-4.211.132.153 ansible_user=yassine ansible_ssh_private_key_file=~/.ssh/id_rsa
+<VM_IP> ansible_user=yassine ansible_ssh_private_key_file=~/.ssh/id_rsa
