--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,13 +52,13 @@ jobs:
           --source-address-prefixes ${{ steps.ip.outputs.runner_ip }}/32 \
           --destination-port-ranges 22 \
           --access Allow \
-          --protocol TCP \
+          --protocol Tcp \
           --description "Temporary rule for GitHub Actions runner ${{ github.run_id }}"
           
         echo "Temporary SSH access granted for IP: ${{ steps.ip.outputs.runner_ip }}"
         
     - name: Wait for NSG rule to apply
-      run: sleep 10
+      run: sleep 20
       
     - name: Setup SSH
       uses: webfactory/ssh-agent@v0.9.0
